--- a/index.html
+++ b/index.html
@@ -33,18 +33,10 @@
             <section>
                 <h3>Sobre mim</h3>
                 <p>
-                     Olá! Meu nome é José Francisco Júnior e tenho 15 anos. Sou um aluno apaixonado por programação e estou dando meus primeiros passos nesse fascinante universo.
-                     Desde que comecei a explorar esse campo, sinto uma empolgação sem limites para aprender e criar.
-                     A programação não é apenas uma habilidade; para mim, é uma forma de expressão que me permite transformar ideias em realidade.
-                     Meu interesse pela tecnologia começou nas aulas de informática, mas foi durante uma aula com meu professor Antônio Pereira de Camargo Júnior que tudo se intensificou. 
-                     Ele me inspirou a desenvolver um site, e essa experiência abriu meus olhos para o potencial que a programação tem.
-                     Desde então, tenho me dedicado cada dia mais a adquirir conhecimentos,praticar e explorar novas linguagens e ferramentas. 
-                     A cada linha de código que escrevo, sinto que estou mais próximo de concretizar meus sonhos.
-                     Estou sempre em busca de novos desafios e oportunidades para crescer. 
-                     Acredito que a curiosidade é a chave para a aprendizagem, e estou determinado a me aprofundar nesse mundo tecnológico. 
-                     Com a ajuda do meu professor e o apoio dos meus colegas, estou construindo uma base sólida que me permitirá enfrentar os desafios do futuro. 
-                     Estou animado para ver aonde essa jornada me levará e mal posso esperar para compartilhar minhas criações e contribuições com o mundo!
-                </p>
+                    olé meu nome é josé tenho 15 anos e quero aprender um pouco mais sobre programação, ja estou aprendendo um pouco mais com meu professor de pensamento computacional
+                estrou criando o meu primeiro site como uma atividade, quero como objetivo usar esse site para postar todos meus projetos e mostra tudo que estou aprendendo com meu professor Antônio,
+            ele é um otimo professor desdo começo ele venho me ensinado, um dos primeiros projetos que fiz foi no scratch criando jogos como pong, depois passamos para o java criamos os mesmo projetos do scratch só que no java em codigos java 
+        gostei muito agora estamos usando o github para criar esses sites.              </p>
             </section>
     
             <section>
